# assignments-3-and-later-etsi-kekeli

./: CMakeLists.txt  Makefile
.github/workflows/: github-actions.yml
assignments/assignment2/: cross-compile.txt
conf/: username.txt
examples/autotest-validate/: autotest-validate.c
examples/systemcalls/: systemcalls.c
examples/threading/: threading.c  threading.h
finder-app/: Makefile  finder-test.sh  finder.sh  manual-linux.sh  writer.c  writer.sh
student-test/assignment1/: Test_validate_username.c
